--- a/README
+++ b/README
@@ -29,7 +29,7 @@ to the exact url when it is available.
 
 License
 -------
-This software is licensed under the Apache 2.0.  See "Apache2.0License.txt" in this directory.
+This software is licensed under the Apache 2.0 license.  See "Apache2.0License.txt" in this directory.
 
 
 Peter Graf, 7/26/13
